@@ -1,3 +1,7 @@
+2011-07-23  Kostas Nakos  <knakos@gmail.com>
+* android/*: Added paddle emulation
+
+
 2011-09-03  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
 * monitor.c: Code cleanup - split MONITOR_Run() into separate functions for
   each monitor command. Functionality unchanged.
